<resources>
    <string name="app_name">PorkGestion</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Animales">Cerdos en la finca</string>
    <string name="Cerdo">Cerdo</string>
    <string name="Raza">Raza</string>
    <string name="razas">Ingrese el nombre de una nueva raza si no se encuentra en el modulo de cerdo.</string>
    <string name="Reproduccion">Reproducción</string>
    <string name="Lactancia">Parto y Lactancia</string>
    <string name="Sanidad">Sanidad</string>
    <string name="Ventas">Ventas</string>
    <string name="Reportes">Reportes</string>
    <string name="Usuario">Edit. Usuario</string>
    <string name="Ayuda">Info. General</string>
    <string name="Cerrar">Cerrar</string>
    <string name="Inicio">Inicio</string>

    <string name="add_medicamento">Agregar medicamento</string>

    <string-array name="sexo">
        <item>Seleccione el sexo</item>
        <item>HEMBRA</item>
        <item>MACHO</item>
    </string-array>
    <string-array name="raza">
        <item>Seleccione la raza</item>
        <item>HAMPSHIRE</item>
        <item>DUROC</item>
        <item>PIETRAIN</item>
        <item>LANDRACE</item>
        <item>YORKSHIRE</item>
        <item>ZUNGO</item>
    </string-array>
    <string-array name="tipoprenez">
        <item>Seleccione el tipo de preñez</item>
        <item>MONTA NATURAL</item>
        <item>INSEMINACION ARTIFICIAL</item>
    </string-array>
    <string-array name="nomverraco">
        <item>Seleccione el nombre del verraco</item>
        <item>TERMINATOR</item>
        <item>SUPERMAN</item>
    </string-array>
    <string-array name="numpajilla">
        <item>Seleccione el numero de la pajilla</item>
        <item>C-01</item>
        <item>C-02</item>
    </string-array>

    <string name="nombre_cerda_string">Nombre de la Cerda</string>
    <string name="numero_cerda_string">Número de la Cerda</string>
    <string name="fecha_parto_string">Fecha Parto</string>
    <string name="total_navivos_string">Lechones X Parto</string>
    <string name="embrasvivas_string">Embras Nacidas vivas</string>
    <string name="machos_vivos_string">Machos Nacidos Vivos</string>
    <string name="embras_muertas_string">Embras Muertas</string>
    <string name="machos_muertos_string">Machos Muertos</string>
    <string name="total_namuertos_string">T. Nacidos Muertos</string>
    <string name="Nombre_verraco_string">Nombre del Verraco</string>
    <string name="numero_verraco_string">Número del Verraco</string>
    <string name="numero_pajilla_string">Número de la Pajilla</string>
    <string name="btingresar">INGRESAR</string>
    <string name="btguardar">GUARDAR</string>
    <string name="btconsultar">CONSULTAR</string>
    <string name="btmodificar">MODIFICAR</string>
    <string name="bteliminar">ELIMINAR</string>
    <string name="fechaprimercelo"> Fecha primer Celo</string>
    <string name="fechasegunocelo">Fecha segundo Celo</string>
    <string name="fechatercercelo">Fecha Tercer Celo</string>
    <string name="fechaecografia">Fecha Ecografía</string>
    <string name="edadmonta">Edad de monta en meses</string>
    <string name="pesomonta">Peso a la Monta</string>
    <string name="fechallenado">Fecha de LLenado</string>
    <string name="descricion">Descripción de la Pajilla </string>
    <string name="observaciones">Observaciones</string>
    <string name="segmento_informativo">Segmento Informativo</string>
    <string name="conceptos">Conceptos</string>

    <string-array name="tipo_monta">
        <item>Seleccione el tipo de monta</item>
        <item>Directa</item>
        <item>Artificial</item>
    </string-array>
    <string name="title_activity_sanidad">Gestión de sanidad</string>
    <string name="title_activity_raza">Gestión de razas</string>
    <string name="title_activity_pajilla">Gestión de pajillas</string>
    <string name="title_activity_parto">Gestión de Partos</string>
<<<<<<< HEAD
    <string name="title_activity_rreproduccion">rreproduccion</string>
=======
    <string name="title_activity_sanidad_cerdo">SanidadCerdo</string>
>>>>>>> master


</resources>
